# hoomd-blue

./: .bumpversion.cfg  .clang-format  .clang-format-ignore  .gitignore  .gitmodules  .ignore  .mailmap  .pre-commit-config-cpp.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .yapfignore  ARCHITECTURE.md  BUILDING.rst  CHANGELOG.rst  CMakeCache.txt  CMakeLists.txt  CMake_build_options.cmake  CMake_install_options.cmake  CMake_preprocessor_flags.cmake  CMake_src_setup.cmake  CMake_version_options.cmake  CONTRIBUTING.md  CONTRIBUTING.rst  CTestConfig.cmake  ChangeLog.md  ChangeLog.md.orig  ContributorAgreement.md  Doxyfile  INSTALLING.rst  LICENSE  README  README.md  SourceConventions.md  alchMD-todos.md  doc-requirements.txt  environment.yml  hoomd-config.cmake.in  hoomd.code-workspace  hoomd.sublime-project  hoomd_cache.cmake.in  (+9 more)
CMake/: CMakeLists.txt
CMake/HIP/: FindHIP.cmake
CMake/cuda/: FindCUDA.cmake  FindThrust.cmake
CMake/git/: GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in
CMake/hoomd/: FindCUDALibs.cmake  FindHOOMDCUDALibs.cmake  FindTBB.cmake  HOOMDBoostSetup.cmake  HOOMDCFlagsSetup.cmake  HOOMDCUDASetup.cmake  HOOMDCommonLibsSetup.cmake  HOOMDHIPSetup.cmake  HOOMDMPISetup.cmake  HOOMDMacros.cmake  HOOMDNumpySetup.cmake  HOOMDOSSpecificSetup.cmake  HOOMDPythonSetup.cmake  TBBSetup.cmake  hipcc.cmake  hoomd-macros.cmake  test.cc
CMake/libgetar/: Findlibgetar.cmake
CMake/mpi/: FindMPI.cmake
CMake/python/: FindPythonLibs.cmake
CMake/thrust/: FindThrust.cmake
doc/: CMakeLists.txt  Doxyfile_dev.in  Doxyfile_user.in
doc/dev/: DeveloperInfo.doc  DoxygenLayout.xml  Groups.doc  MainPage.doc  doxygen_dummy.h
doc/gle/: class_overview.gle  uml.gle
doc/user/: Doxyfile.in  HOOMD.bib  aniso.dox  autotuner.dox  box.dox  citing.dox  command_line_options.doc  command_line_options.dox  compile_guide.doc  compile_guide.dox  compile_guide_linux_centos.dox  compile_guide_linux_fedora.dox  compile_guide_linux_generic.doc  compile_guide_linux_generic.dox  compile_guide_linux_opensuse.dox  compile_guide_linux_ubuntu.dox  compile_guide_mac.doc  compile_guide_mac.dox  compile_guide_windows.doc  concepts.dox  conversion_scripts.doc  conversion_scripts.dox  credits.doc  credits.dox  examples.doc  examples.dox  footer.html  header-style.css  header.html  index.doc  index.dox  installation_guide.doc  installation_guide.dox  license.doc  license.dox  mpi.doc  mpi.dox  quick_start.doc  quick_start.dox  restartable_jobs.dox  (+5 more)
example_plugin/: CMakeLists.txt  FindHOOMD.cmake
example_plugin/example_plugin/: CMakeLists.txt  ExampleUpdater.cc  ExampleUpdater.cu  ExampleUpdater.cuh  ExampleUpdater.h  __init__.py  module.cc  update.py
example_plugins/: CMakeLists.txt
example_plugins/pair_plugin/: CMakeLists.txt  EvaluatorPairExample.h  PotentialPairExampleGPUKernel.cu  __init__.py  module.cc  pair.py
example_plugins/shape_plugin/: CMakeLists.txt  ShapeMySphere.h  __init__.py  integrate.py  kernels.cu  module.cc
example_plugins/updater_plugin/: CMakeLists.txt  ExampleUpdater.cc  ExampleUpdater.cu  ExampleUpdater.cuh  ExampleUpdater.h  __init__.py  module.cc  update.py
hoomd/: .Communicator.cc.swp  AABB.h  AABBTree.h  Action.cc  Action.h  AlchemicalForceCompute.h  AlchemyData.cc  AlchemyData.h  Analyzer.cc  Analyzer.h  ArrayView.h  Autotuned.cc  Autotuned.h  Autotuner.cc  Autotuner.h  BondedGroupData.cc  BondedGroupData.cu  BondedGroupData.cuh  BondedGroupData.h  BoxDim.h  BoxResizeUpdater.cc  BoxResizeUpdater.h  BoxResizeUpdaterGPU.cc  BoxResizeUpdaterGPU.cu  BoxResizeUpdaterGPU.cuh  BoxResizeUpdaterGPU.h  CMakeLists.txt  CachedAllocator.h  CallbackAnalyzer.cc  CallbackAnalyzer.h  CellList.cc  CellList.h  CellListGPU.cc  CellListGPU.cu  CellListGPU.cuh  CellListGPU.h  CellListStencil.cc  CellListStencil.h  ClockSource.cc  ClockSource.h  (+268 more)
hoomd/analyze/: CMakeLists.txt  __init__.py  custom_analyzer.py  python_analyzer.py
hoomd/cgcmm/: CGCMMAngleForceCompute.cc  CGCMMAngleForceCompute.h  CGCMMAngleForceComputeGPU.cc  CGCMMAngleForceComputeGPU.h  CGCMMAngleForceGPU.cu  CGCMMAngleForceGPU.cuh  CGCMMForceCompute.cc  CGCMMForceCompute.h  CGCMMForceComputeGPU.cc  CGCMMForceComputeGPU.h  CGCMMForceGPU.cu  CGCMMForceGPU.cuh  CMakeLists.txt  __init__.py  angle.py  module-cgcmm.cc  pair.py
hoomd/custom/: CMakeLists.txt  __init__.py  custom_action.py  custom_operation.py
hoomd/data/: CMakeLists.txt  __init__.py  array.py  array_view.py  attacherror.py  collections.py  data_access_error.py  data_structures.py  local_access.py  local_access_cpu.py  local_access_gpu.py  param_dict.py  parameter_dict.py  parameterdicts.py  smart_default.py  syncedlist.py  type_param_dict.py  typeconverter.py  typeparam.py
hoomd/dem/: CMakeLists.txt  DEM2DForceCompute.cc  DEM2DForceCompute.h  DEM2DForceComputeGPU.cc  DEM2DForceComputeGPU.h  DEM2DForceGPU.cu  DEM2DForceGPU.cuh  DEM3DForceCompute.cc  DEM3DForceCompute.h  DEM3DForceComputeGPU.cc  DEM3DForceComputeGPU.h  DEM3DForceGPU.cu  DEM3DForceGPU.cuh  DEMEvaluator.cc  DEMEvaluator.h  DEMGSDShapeSpec.h  DEMGSDShapeSpecParser.h  DEMShapeSpecParser.h  NoFriction.h  SWCAPotential.cc  SWCAPotential.h  VectorMath.h  WCAPotential.cc  WCAPotential.h  __init__.py  _dem.py  atomics.cuh  module.cc  pair.py  params.py  utils.py
hoomd/deprecated/: CMakeLists.txt  HOOMDDumpWriter.cc  HOOMDDumpWriter.h  HOOMDInitializer.cc  HOOMDInitializer.h  MSDAnalyzer.cc  MSDAnalyzer.h  POSDumpWriter.cc  POSDumpWriter.h  RandomGenerator.cc  RandomGenerator.h  __init__.py  analyze.py  (+4 more)
installer/: CMakeLists.txt
packaging/: CMakeLists.txt  Makefile  README  deb_build_nightly.sh  deb_build_tag.sh  redhat_build_package.sh
python-module/: CMakeLists.txt
python-runner/: CMakeLists.txt  hoomd  hoomd.cc  hoomd.in  hoomd_dev_dynamic.in  hoomd_run.in  hoomd_static.in
share/: CMakeLists.txt
src/: CMakeBoostSetup.txt  CMakeCFlagsSetup.txt  CMakeCUDASetup.txt  CMakeFFTSetup.txt  CMakeInstSetup.txt  CMakeLists.txt  CMakeMiscSetup.txt  CMakeSRCSetup.txt  CMake_build_options.cmake  CMake_install_options.cmake  CMake_src_setup.cmake  CTestConfig.cmake  LICENSE
(+3825 files in other folders)
